--- a/EnderYasar-Isik-Task1/configs/configuration3.config
+++ b/EnderYasar-Isik-Task1/configs/configuration3.config
@@ -1,9 +1,10 @@
 Lektionen
 Chronologisch
 Sortiert
-Zufällig
 Tastatureingabe
+"CSV Import"
 "XML-Datei Import"
+"CSV Export"
 "XML-Datei Export"
 Statistik
 Drucken
