--- a/EnderYasar-Isik-Task1/configs/configuration2.config
+++ b/EnderYasar-Isik-Task1/configs/configuration2.config
@@ -1,6 +1,8 @@
 Lektionen
 Chronologisch
 Tastatureingabe
-"XML-Datei Import"
-"XML-Datei Export"
 Drucken
+"XML-Datei
+Import"
+"XML-Datei
+Export"
