--- a/EnderYasar-Isik-Task1/configs/configuration3.config
+++ b/EnderYasar-Isik-Task1/configs/configuration3.config
@@ -2,9 +2,13 @@ Lektionen
 Chronologisch
 Sortiert
 Tastatureingabe
-"CSV Import"
-"XML-Datei Import"
-"CSV Export"
-"XML-Datei Export"
 Statistik
 Drucken
+"CSV
+Import"
+"XML-Datei
+Import"
+"CSV
+Export"
+"XML-Datei
+Export"
