--- a/EnderYasar-Isik-Task1/configs/configuration4.config
+++ b/EnderYasar-Isik-Task1/configs/configuration4.config
@@ -4,9 +4,13 @@ Sortiert
 Zufällig
 Mehrfachauswahl
 Tastatureingabe
-"CSV Import"
-"XML-Datei Import"
-"CSV Export"
-"XML-Datei Export"
 Statistik
 Drucken
+"CSV
+Import"
+"XML-Datei
+Import"
+"CSV
+Export"
+"XML-Datei
+Export"
