--- a/EnderYasar-Isik-Task1/configs/configuration5.config
+++ b/EnderYasar-Isik-Task1/configs/configuration5.config
@@ -5,12 +5,19 @@ Zufällig
 Quiz
 Mehrfachauswahl
 Tastatureingabe
-"Variable Abfragerichtung"
-"CSV Import"
-"Datenbank Import"
-"XML-Datei Import"
-"CSV Export"
-"Datenbank Export"
-"XML-Datei Export"
 Statistik
 Drucken
+"Variable
+Abfragerichtung"
+"CSV
+Import"
+"Datenbank
+Import"
+"XML-Datei
+Import"
+"CSV
+Export"
+"Datenbank
+Export"
+"XML-Datei
+Export"
