--- a/EnderYasar-Isik-Task2/.classpath
+++ b/EnderYasar-Isik-Task2/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="/Users/Yasar/Programmierung/Eclipse Entwicklungsumgebung/EnderYasar-Isik-Task2/miglayout-4.0.jar"/>
-	<classpathentry kind="lib" path="/Users/Yasar/Programmierung/Eclipse Entwicklungsumgebung/EnderYasar-Isik-Task2/jdom-2.0.6.jar">
+	<classpathentry kind="lib" path="/Users/Yasar/Programmierung/Eclipse Entwicklungsumgebung/Git/spl2015.ender.yasar.isik/EnderYasar-Isik-Task2/miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Yasar/Programmierung/Eclipse Entwicklungsumgebung/Git/spl2015.ender.yasar.isik/EnderYasar-Isik-Task2/jdom-2.0.6.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/Users/Yasar/Programmierung/Eclipse%20Entwicklungsumgebung/EnderYasar-Isik-Task2/jdom-2.0.6-javadoc.jar!/"/>
 		</attributes>
