Bindestriche in den Feature-Bezeichnungen entfernt. Suche als Feature hinzugefügt.

--- a/EnderYasar-Isik-Task1/configs/configuration3.config
+++ b/EnderYasar-Isik-Task1/configs/configuration3.config
@@ -2,13 +2,9 @@ Lektionen
 Chronologisch
 Sortiert
 Tastatureingabe
+CSVImport
+XMLDateiImport
+CSVExport
+XMLDateiExport
 Statistik
 Drucken
-"CSV
-Import"
-"XML-Datei
-Import"
-"CSV
-Export"
-"XML-Datei
-Export"
