--- a/EnderYasar-Isik-Task1/configs/configuration4.config
+++ b/EnderYasar-Isik-Task1/configs/configuration4.config
@@ -4,13 +4,9 @@ Sortiert
 Zufällig
 Mehrfachauswahl
 Tastatureingabe
+CSVImport
+XMLDateiImport
+CSVExport
+XMLDateiExport
 Statistik
 Drucken
-"CSV
-Import"
-"XML-Datei
-Import"
-"CSV
-Export"
-"XML-Datei
-Export"
