--- a/EnderYasar-Isik-Task1/configs/configuration5.config
+++ b/EnderYasar-Isik-Task1/configs/configuration5.config
@@ -5,19 +5,13 @@ Zufällig
 Quiz
 Mehrfachauswahl
 Tastatureingabe
+VariableAbfragerichtung
+CSVImport
+DatenbankImport
+XMLDateiImport
+CSVExport
+DatenbankExport
+XMLDateiExport
 Statistik
 Drucken
-"Variable
-Abfragerichtung"
-"CSV
-Import"
-"Datenbank
-Import"
-"XML-Datei
-Import"
-"CSV
-Export"
-"Datenbank
-Export"
-"XML-Datei
-Export"
+Suchen
