Präprozessor-Direktiven an das Feature-Modell angepasst. Zwei neue Features in das Modell hinzugefügt. Fehler in der GUI behoben.

--- a/EnderYasar-Isik-Task3/.settings/org.eclipse.core.resources.prefs
+++ b/EnderYasar-Isik-Task3/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,7 @@
 eclipse.preferences.version=1
+encoding//configs/.configuration1.fideconf=UTF-8
+encoding//configs/.configuration2.fideconf=UTF-8
+encoding//configs/.configuration3.fideconf=UTF-8
+encoding//configs/.configuration4.fideconf=UTF-8
+encoding//configs/.configuration5.fideconf=UTF-8
 encoding//configs/.default.fideconf=UTF-8
