--- a/EnderYasar-Isik-Task3/configs/configuration2.config
+++ b/EnderYasar-Isik-Task3/configs/configuration2.config
@@ -1,6 +1,7 @@
 Chronologisch
 Tastatureingabe
-XMLDateiImport
-XMLDateiExport
-Lektionen
-Drucken
+DeutschFremdsprache
+Import
+XMLImport
+Export
+XMLExport
