--- a/EnderYasar-Isik-Task3/configs/configuration3.config
+++ b/EnderYasar-Isik-Task3/configs/configuration3.config
@@ -1,10 +1,11 @@
 Chronologisch
 Sortiert
 Tastatureingabe
+DeutschFremdsprache
+Import
 CSVImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-XMLDateiExport
+XMLExport
 Statistik
-Lektionen
-Drucken
