--- a/EnderYasar-Isik-Task3/configs/configuration4.config
+++ b/EnderYasar-Isik-Task3/configs/configuration4.config
@@ -1,12 +1,12 @@
 Chronologisch
 Sortiert
 Tastatureingabe
+DeutschFremdsprache
+FremdspracheDeutsch
+Import
 CSVImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-XMLDateiExport
+XMLExport
 Statistik
-Lektionen
-Zufaellig
-Mehrfachauswahl
-Drucken
