--- a/EnderYasar-Isik-Task3/configs/configuration5.config
+++ b/EnderYasar-Isik-Task3/configs/configuration5.config
@@ -1,17 +1,13 @@
 Chronologisch
 Sortiert
 Tastatureingabe
+DeutschFremdsprache
+FremdspracheDeutsch
+Import
 CSVImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-XMLDateiExport
+XMLExport
 Statistik
 Suchen
-Lektionen
-Zufaellig
-Quiz
-Mehrfachauswahl
-VariableAbfragerichtung
-DatenbankImport
-DatenbankExport
-Drucken
