--- a/EnderYasar-Isik-Task3/.project
+++ b/EnderYasar-Isik-Task3/.project
@@ -6,11 +6,6 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>antenna.eclipse.preprocessor.appbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>de.ovgu.featureide.core.extensibleFeatureProjectBuilder</name>
 			<arguments>
 				<dictionary>
@@ -19,7 +14,7 @@
 				</dictionary>
 				<dictionary>
 					<key>composer</key>
-					<value>de.ovgu.featureide.composer.ahead</value>
+					<value>de.ovgu.featureide.preprocessor.antenna</value>
 				</dictionary>
 				<dictionary>
 					<key>equations</key>
@@ -29,6 +24,11 @@
 					<key>source</key>
 					<value>features</value>
 				</dictionary>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>antenna.eclipse.preprocessor.appbuilder</name>
+			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
