Änderungen aus Task3 übernommen, um alles einheitlich und konsistent zu halten.

--- a/EnderYasar-Isik-Task1/.settings/org.eclipse.core.resources.prefs
+++ b/EnderYasar-Isik-Task1/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//configs/.configuration2.fideconf=UTF-8
 encoding//configs/.configuration3.fideconf=UTF-8
 encoding//configs/.configuration4.fideconf=UTF-8
 encoding//configs/.configuration5.fideconf=UTF-8
+encoding//configs/.default.fideconf=UTF-8
