--- a/EnderYasar-Isik-Task1/configs/configuration2.config
+++ b/EnderYasar-Isik-Task1/configs/configuration2.config
@@ -1,6 +1,7 @@
-Lektionen
 Chronologisch
 Tastatureingabe
-XMLDateiImport
-XMLDateiExport
-Drucken
+DeutschFremdsprache
+Import
+XMLImport
+Export
+XMLExport
