--- a/EnderYasar-Isik-Task1/configs/configuration3.config
+++ b/EnderYasar-Isik-Task1/configs/configuration3.config
@@ -1,10 +1,11 @@
-Lektionen
 Chronologisch
 Sortiert
 Tastatureingabe
+DeutschFremdsprache
+Import
 CSVImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-XMLDateiExport
+XMLExport
 Statistik
-Drucken
