--- a/EnderYasar-Isik-Task1/configs/configuration4.config
+++ b/EnderYasar-Isik-Task1/configs/configuration4.config
@@ -1,12 +1,12 @@
-Lektionen
 Chronologisch
 Sortiert
-Zufaellig
-Mehrfachauswahl
 Tastatureingabe
+DeutschFremdsprache
+FremdspracheDeutsch
+Import
 CSVImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-XMLDateiExport
+XMLExport
 Statistik
-Drucken
