--- a/EnderYasar-Isik-Task1/configs/configuration5.config
+++ b/EnderYasar-Isik-Task1/configs/configuration5.config
@@ -1,17 +1,13 @@
-Lektionen
 Chronologisch
 Sortiert
-Zufaellig
-Quiz
-Mehrfachauswahl
 Tastatureingabe
-VariableAbfragerichtung
+DeutschFremdsprache
+FremdspracheDeutsch
+Import
 CSVImport
-DatenbankImport
-XMLDateiImport
+XMLImport
+Export
 CSVExport
-DatenbankExport
-XMLDateiExport
+XMLExport
 Statistik
-Drucken
 Suchen
