--- a/EnderYasar-Isik-Task5/configs/configuration2.config
+++ b/EnderYasar-Isik-Task5/configs/configuration2.config
@@ -1,4 +1,5 @@
 Vokabelverwaltung
+Abfragereihenfolge
 Chronologisch
 VariableAbfragerichtung
 DeutschFremdsprache
@@ -6,4 +7,3 @@ Import
 XMLImport
 Export
 XMLExport
-Tastatureingabe
