--- a/EnderYasar-Isik-Task5/configs/configuration4.config
+++ b/EnderYasar-Isik-Task5/configs/configuration4.config
@@ -1,4 +1,5 @@
 Vokabelverwaltung
+Abfragereihenfolge
 Chronologisch
 Sortiert
 VariableAbfragerichtung
@@ -11,4 +12,3 @@ Export
 CSVExport
 XMLExport
 Statistik
-Tastatureingabe
