--- a/EnderYasar-Isik-Task5/configs/configuration5.config
+++ b/EnderYasar-Isik-Task5/configs/configuration5.config
@@ -1,4 +1,5 @@
 Vokabelverwaltung
+Abfragereihenfolge
 Chronologisch
 Sortiert
 VariableAbfragerichtung
@@ -12,4 +13,3 @@ CSVExport
 XMLExport
 Statistik
 Suchen
-Tastatureingabe
