--- a/EnderYasar-Isik-Task5/configs/configuration3.config
+++ b/EnderYasar-Isik-Task5/configs/configuration3.config
@@ -1,4 +1,5 @@
 Vokabelverwaltung
+Abfragereihenfolge
 Chronologisch
 Sortiert
 VariableAbfragerichtung
@@ -10,4 +11,3 @@ Export
 CSVExport
 XMLExport
 Statistik
-Tastatureingabe
