--- a/EnderYasar-Isik-Task6/.classpath
+++ b/EnderYasar-Isik-Task6/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="Import.aj|CSVImport.aj|XMLImport.aj|JSONImport.aj|Export.aj|CSVExport.aj|XMLExport.aj|JSONExport.aj|Statistik.aj|Suchen.aj" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
 	<classpathentry kind="lib" path="libraries/jdom-2.0.6.jar">
